Archive2/d7/ff03619c339667/output
main.cpp:11:1: error: expected ';' after class definition
 }
 ^
main.cpp:15:13: error: expected unqualified-id before ')' token
     Setting(){
             ^
main.cpp:23:1: error: expected ';' after class definition
 }
 ^
